# process-nitta

./: .coderabbit.yaml  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml
.github/workflows/: ci-lint.yml  ci-test.yml  need-release.yml
example/: agis.ipynb  dma.ipynb  instron.ipynb  ir.ipynb  raman.ipynb
sample_data/: instron.csv
src/process-nitta/: csv_config.py
src/process_nitta/: __init__.py  agis.py  csv_config.py  dma.py  instron.py  ir_nicolet.py  raman.py
test/: test_csv_config.py
test/csv/: dma.csv
tests/: test_agis.py  test_dma.py  test_instron.py  test_ir_nicolet.py  test_raman.py
tests/answer_data/: agis.csv  instron.csv
