[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "process-nitta"
version = "0.0.1"
authors = [{ name = "Kamono Makoto", email = "chengyaye31@gmail.com" }]
description = "process experimental data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
